--- a/investigation/1024v.ipynb
+++ b/investigation/1024v.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d8057943",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c3664043",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "93e74e51",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "6c31adea",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "f5047d9d",
    "metadata": {},
    "outputs": [
@@ -85,15 +85,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "7e81e866",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 222/222 [00:00<00:00, 1769.66it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Merged DataFrame has 259380 rows and 16 columns.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -110,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "e7312073",
    "metadata": {},
    "outputs": [
@@ -158,7 +172,7 @@
        "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "6a86ce12",
    "metadata": {},
    "outputs": [
@@ -189,7 +203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "id": "c62318fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "34350374",
    "metadata": {},
    "outputs": [
@@ -197,13 +219,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vertex Filtered DataFrame has 26735 rows.\n"
+      "Vertex Filtered DataFrame has 66325 rows.\n"
      ]
     }
    ],
    "source": [
-    "# Filter all rows where 'num_vertices' > 100 and 'num_vertices' < 512\n",
-    "vertex_filtered_df = vf_filtered_df.filter((pl.col('num_vertices') > 100) & (pl.col('num_vertices') < 1024))\n",
+    "# Filter all rows where 'num_vertices' > 100 and 'num_vertices' < 1024\n",
+    "vertex_filtered_df = vf_filtered_df.filter(pl.col('num_vertices') < 1024)\n",
     "print(f'Vertex Filtered DataFrame has {vertex_filtered_df.height} rows.')"
    ]
   }
