--- a/investigation/512v_ma0dot001.ipynb
+++ b/investigation/512v_ma0dot001.ipynb
@@ -93,7 +93,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 222/222 [00:00<00:00, 1769.66it/s]"
+      "  0%|          | 0/222 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 222/222 [00:00<00:00, 1608.27it/s]"
      ]
     },
     {
@@ -191,27 +198,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtered DataFrame has 85399 rows.\n"
+      "Filtered DataFrame has 259175 rows.\n"
      ]
     }
    ],
    "source": [
     "# Filter all rows where 'mesh_volume' > 0.001 and 'mesh_area' > 0.001\n",
-    "vf_filtered_df = merged_df.filter((pl.col('mesh_volume') > 0.001) & (pl.col('mesh_area') > 0.001))\n",
+    "vf_filtered_df = merged_df.filter(pl.col('mesh_area') > 0.001)\n",
     "print(f'Filtered DataFrame has {vf_filtered_df.height} rows.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c62318fc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "34350374",
    "metadata": {},
    "outputs": [
@@ -219,13 +218,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vertex Filtered DataFrame has 66325 rows.\n"
+      "Vertex Filtered DataFrame has 127841 rows.\n"
      ]
     }
    ],
    "source": [
-    "# Filter all rows where 'num_vertices' > 100 and 'num_vertices' < 1024\n",
-    "vertex_filtered_df = vf_filtered_df.filter(pl.col('num_vertices') < 1024)\n",
+    "# Filter all rows where 'num_vertices' > 100 and 'num_vertices' < 512\n",
+    "vertex_filtered_df = vf_filtered_df.filter(pl.col('num_vertices') < 512)\n",
     "print(f'Vertex Filtered DataFrame has {vertex_filtered_df.height} rows.')"
    ]
   }
