--- a/investigation/512v_mia0d001_mac8_mic2_com10.ipynb
+++ b/investigation/512v_mia0d001_mac8_mic2_com10.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d8057943",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import polars as pl\n",
-    "import numpy as np\n",
     "\n",
     "from glob import glob\n",
     "from tqdm import tqdm"
@@ -193,7 +192,7 @@
     }
    ],
    "source": [
-    "# Filter all rows where 'mesh_volume' > 0.001 and 'mesh_area' > 0.001\n",
+    "# Filter all rows where 'mesh_area' > 0.001\n",
     "vf_filtered_df = merged_df.filter(pl.col('mesh_area') > 0.001)\n",
     "print(f'Filtered DataFrame has {vf_filtered_df.height} rows.')"
    ]
